<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_PROCEDURE_DISCONNECTING_STATE" Id="{330550cb-38e0-467b-88d9-aee7b5164971}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE DB_PROCEDURE_DISCONNECTING_STATE :
(
	IDLING,
	DATA_SET_RELEASING,
	PARAMETERS_RELEASING,
	DISCONNECTING
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>