<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_PROCEDURE_EXECUTION_STATE" Id="{dd6ed0e1-ac6f-4548-9b9d-4684b1e5696a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE DB_PROCEDURE_EXECUTION_STATE :
(
	IDLING,
	STARTING,
	CONNECTING,
	PREPARING,
	EXECUTING,
	LOADING_RESULT_DATA_SET,
	DISCONNECTING
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>