<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_ROCEDURE_EXECUTION_PARAMETERS" Id="{69aa6afe-0c85-4141-ad12-01e7911ce022}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}	
TYPE DB_ROCEDURE_EXECUTION_PARAMETERS :
STRUCT
	DbId : UDINT;
	ProcedureName : Tc2_System.T_MaxString;
	ParameterDescriptors : POINTER TO Tc3_Database.ST_SQLSPParameter;
	ParameterDescriptorsSize : UDINT;
	ParameterValues : PVOID;
	ParameterValuesSize : UDINT;	
	TargetBuffer : PVOID; 
	TargetBufferSize : UDINT;
	MaxRecordsToReadAtTime : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>